got something resembling an fft plot working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ log = "0.4"
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
 egui_plot = "0.27.2"
+rustfft = "6.2.0"
